APINOTE-17 hide cell-menu when the notebook is embedded

--- a/src/templates/views/editor-cell.hbs
+++ b/src/templates/views/editor-cell.hbs
@@ -1,5 +1,5 @@
 <div class="cell-content">
-  <button class="btn cell-controls-btn cell-menu-toggle">≡</button>
+    {{^if @config.embedded}}<button class="btn cell-controls-btn cell-menu-toggle">≡</button>{{/if}}
 </div>
 
 <div class="cell-border cell-border-above">
