Fixes not working links on the home page [APINOTE-95]

--- a/src/templates/views/app.hbs
+++ b/src/templates/views/app.hbs
@@ -59,7 +59,7 @@
     {{{view @data.notebook}}}
 
     {{#unless @config.embedded}}
-      <a href="http://mulesoft.com" class="ir powered-by-logo">MuleSoft</a>
+      <a href="https://mulesoft.com" class="ir powered-by-logo">MuleSoft</a>
     {{/unless}}
   </div>
 </div>
